<resources>
    <string name="app_name">KAVUN</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Sign_in">Sign in</string>
    <string name="Sign_up">Sign up</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Hide">Hide password</string>
    <string name="Remember">Remember me</string>
    <string name="Show">Show password</string>
    <string name="Foret_your_password">Forget your password ?</string>
    <string name="Not_member_yet">Not member yet ?</string>
    <string name="Name">Name</string>
    <string name="Please_fill">Please fill the all lines</string>
    <string name="Invalid_pass">Invalid password</string>
    <string name="Invalid_Email">Invalid Email id</string>
    <string name="Check_your_email_box">Check your email box</string>
    <string name="wrong">Wrong Email id or password</string>
    <string name="result_text">GRATTIS!!!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Incomes</string>
    <string name="expence">Expences</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="title">Tittle</string>
    <string name="amount">SEK</string>

    <string-array name="category_expenditure_items">
        <item>Category</item>
        <item>Food</item>
        <item>Leisure</item>
        <item>Travel</item>
        <item>Accommodation</item>
        <item>Other</item>
    </string-array>
    <string-array name="category_income_items">
        <item>Category</item>
        <item>Salary</item>
        <item>Interest</item>
        <item>Exchange</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_list">ListActivity</string>


</resources>
