<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:clickable="true"
    android:fillViewport="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="20dp"
    android:scrollbars="none"
    tools:context="com.example.yurdaer.kavun.LoginActivity">


    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp" />


        <EditText
            android:id="@+id/m_name_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawablePadding="7dp"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <EditText
            android:id="@+id/m_pass_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawablePadding="7dp"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginBottom="10dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:text="@string/Show"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold|italic"

                />

            <CheckBox
                android:id="@+id/check_box_remember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:text="@string/Remember"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold|italic"
                android:checked="true"

                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Sign_in"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Sign_up"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>


</ScrollView>
