<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="50dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="60dp"
    android:layout_marginLeft="60dp"

    android:orientation="vertical"
    android:background="@color/orange"
    tools:context="com.example.yurdaer.kavun.AddFragment">

    <TextView
        android:id="@+id/tv_date_pick"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:textColorHint="@color/orange"
        android:padding="10dp"
        android:hint="\??-??--??"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:visibility="visible" />

    <Spinner
        android:id="@+id/spn_add_inc"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/tvTitle_add_inc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/tvAmount_add_inc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginRight="5dp"
        android:hint="@string/amount"
        android:paddingTop="5dp"
        android:background="@color/white"
        android:ems="10"
        android:paddingBottom="10dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textStyle="bold"
        tools:ignore="LabelFor,RtlHardcoded" />

    <Button
        android:id="@+id/btn_save_inc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="23sp"
        android:textStyle="bold|italic"
        android:visibility="visible" />

</LinearLayout>
